cloudpebble-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudpebble-frontend
spec:
  type: NodePort
  selector:
    app: cloudpebble-frontend
  ports:
  - protocol: TCP
    port: 23451
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudpebble-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: cloudpebble-frontend-ip
spec:
  backend:
    serviceName: cloudpebble-frontend
    servicePort: 23451
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudpebble-frontend-deployment
  labels:
    app: cloudpebble-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudpebble-frontend
  template:
    metadata:
      labels:
        app: cloudpebble-frontend
    spec:
      containers:
      -  name: cloudpebble-frontend
         image: gcr.io/cloudrebble-k8s/cloudpebble:0.0.1
         command: ["gunicorn", "-c", "gunicorn.py", "cloudpebble.wsgi"]
         ports:
         - containerPort: 8080
         livenessProbe:
          httpGet:
            path: /
            port: 8080
      - name: frontend-cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=cloudrebble-k8s:us-central1:cloudpebble-db=tcp:5432",
                  "-credential_file=/secrets/cloudsql/cloudrebble-k8s-511ff76c5b00.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudpebble-worker-deployment
  labels:
    app: cloudpebble-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudpebble-worker
  template:
    metadata:
      labels:
        app: cloudpebble-worker
    spec:
      containers:
      -  name: cloudpebble-worker
         image: gcr.io/cloudrebble-k8s/cloudpebble:0.0.1
         command: ["python", "manage.py", "celeryd", "-E", "-l", "info"]
      - name: frontend-cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=cloudrebble-k8s:us-central1:cloudpebble-db=tcp:5432",
                  "-credential_file=/secrets/cloudsql/cloudrebble-k8s-511ff76c5b00.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
